--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.3",
+    "redis": "^4.7.0",
     "socket.io": "^4.7.5",
     "typeorm": "^0.3.20"
   }
