--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Awesome project developed with TypeORM.",
   "type": "commonjs",
   "scripts": {
-    "start": "node --watch src/server.js",
+    "start": "nodemon src/server.js",
     "seed:run": "node src/seed/seed.js"
   },
   "dependencies": {
@@ -21,5 +21,8 @@
     "redis": "^4.7.0",
     "socket.io": "^4.7.5",
     "typeorm": "^0.3.20"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
