--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "description": "Awesome project developed with TypeORM.",
   "type": "commonjs",
   "scripts": {
-    "start": "nodemon src/server.js",
+    "build": "cross-env BUILD_MODE=production node src/server.js",
+    "dev": "cross-env BUILD_MODE=dev nodemon src/server.js",
     "seed:run": "node src/seed/seed.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-async-errors": "^3.1.1",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.3",
@@ -23,6 +23,10 @@
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "@types/node": "^22.6.1",
+    "cross-env": "^7.0.3",
+    "nodemon": "^3.1.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2"
   }
 }
