--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-async-errors": "^3.1.1",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "livekit-server-sdk": "^2.7.0",
     "mysql2": "^3.10.3",
     "redis": "^4.7.0",
     "socket.io": "^4.7.5",
